# nonebot_plugin_groupmate_waifu

./: .gitignore  README.md  __init__.py  config.py  pyproject.toml  utils.py
nonebot_plugin_groupmate_waifu/: __init__.py  config.py
